--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <div class="card">
       <h3>Railway Reservation System</h3>
       <ul>
-        <li>Built a ticket booking and cancellation system using C++.</li>
+        <li>Built a ticket booking and cancellation system using C.</li>
         <li>Used file handling for real-time data management.</li>
         <li>Implemented passenger records, seat allocation, and fare calculation.</li>
       </ul>
@@ -223,3 +223,4 @@
 
 </body>
 </html>
+
